correct social icons alignment

--- a/style.scss
+++ b/style.scss
@@ -30,7 +30,7 @@ html {
 
 body {
 	background: transparent;
-  font: 1.2rem;
+  font: 1.4rem;
   color: #000;
 }
 
@@ -55,6 +55,7 @@ header {
   min-height: 100vh;
 }
 .about {
+  float: center
   background-color: #fff;
   max-width: 26rem;
   padding: 1rem 1rem 0rem 0rem;
@@ -96,15 +97,15 @@ a {
   color: #FE93B5;
 }
 
-// // Specify the color of the selection
-// ::-moz-selection {
-//   color: $black;
-//   background: $lightGray;
-// }
-// ::selection {
-//   color: $black;
-//   background: $lightGray;
-// }
+// Specify the color of the selection
+::-moz-selection {
+  color: #000;
+  background: #7AB317;
+}
+::selection {
+  color: #000;
+  background: #7AB317;
+}
 
 // Nicolas Gallagher's micro clearfix hack
 // http://nicolasgallagher.com/micro-clearfix-hack/
@@ -171,7 +172,39 @@ a {
     margin: 3px 0;
   }
 }
+.social {
+  display: flex;
+  /* margin-top: 1.5rem;
+  margin-bottom: 0.5rem; */
+}
 
+.social li {
+  height: 2rem;
+  margin-right: 0.5rem;
+  text-align: center;
+  width: 2rem;
+}
+
+.social a {
+  align-items: center;
+  display: flex;
+  font-size: 1.5rem;
+  color: #2A87EF;
+  height: 2rem;
+  justify-content: center;
+  opacity: 0.7;
+  transition-property: opacity, transform;
+  width: 2rem;
+  will-change: opacity, transform;
+}
+.social a:hover {
+  opacity: 1;
+  transform: scale(1.25);
+}
+.social a:active {
+  opacity: 1;
+  transform: scale(1.1);
+}
 .topnav {
   display: flex;
   float: right;
